--- a/report_greenwup/report.tex
+++ b/report_greenwup/report.tex
@@ -238,5 +238,27 @@ e che non sono puramente randomici come nel caso di GREEN-WUP.\\
 Tutti i dati riportati fanno riferimento ad un numero di esecuzioni sufficientemente elevato da fornire un intervallo di confidenza del 95\% con una precisione
 del 5\% e i risultati finali sono considerati come la media di tutte le esecuzioni.
 
+\clearpage
+
+\begin{figure}
+    \centering
+    \begin{minipage}{.5\textwidth}
+        \centering
+        \includegraphics[width=1\linewidth]{energy_plot.png}
+        \caption*{(a)}
+    \end{minipage}%
+    \begin{minipage}{.5\textwidth}
+        \centering
+        \includegraphics[width=1\linewidth]{interest_energy_plot.png}
+        \caption*{(b)}
+    \end{minipage}
+    \caption{Comparazione energetica di GREEN-WUP e Variante senza (a) e con (b) fase di interest dissemination per determinare l'hop count.}
+\end{figure}
+
+I risultati qui evidenziati mostrano i costi aggiuntivi di energia richiesti implementando anche la fase di interest dissemination. In questo caso, i consumi
+energetici della rete aumentano in quanto i nodi sono attivi anche prima della fase di scambio dati. Considerando i grafici in Figura 1.4,
+il massimo consumo energetico della rete è registrato nel caso di traffico più elevato ($iaTime=2$): in (b) la versione base del protocollo
+raggiunge 50J e la variante 39J, contro i 38J e 33J rispettivamente di GREEN-WUP e Variante mostrati in (a).
+
 \phantomsection % Give this command only if hyperref is loaded
 \end{document}
