Update thesis title

--- a/relazione.tex
+++ b/relazione.tex
@@ -11,9 +11,9 @@
 \usepackage{setspace}
 \onehalfspacing
 
-\hypersetup{pdftitle={Progettazione di un dispositivo IoT basato su wake up radio},pdfauthor={Leonardo Emili}}
+\hypersetup{pdftitle={Green IoT: Design e valutazione delle prestazioni di protocolli per sistemi IoT dotati di wake up radio},pdfauthor={Leonardo Emili}}
 
-\title{Progettazione di un dispositivo IoT basato su wake up radio}
+\title{Green IoT: Design e valutazione delle prestazioni di protocolli per sistemi IoT dotati di wake up radio}
 \author{Leonardo Emili}
 \IDnumber{1802989}
 \course{Informatica L-31}
