--- a/relazione.tex
+++ b/relazione.tex
@@ -46,8 +46,8 @@
 %WSN reti di nodi sensori con applicazioni in, permettono di, hanno queste sfide (energia, latenza, disponibilità)
 %Nel mio percorso mi sono concentrato su green WSN: studio di protocolli e delle metodologie impiegate, implementazione di GreenWup un protocollo fatto così, e variazioni.
 
-Nell'ultimo decennio abbiamo assistito ad un portentoso sviluppo del settore dell'Internet of Things che ha contribuito alla diffusione
-di un enorme numero di dispositivi wireless. Il numero di questi dispositivi ha registrato crescite costanti negli anni e loro applicazioni sono pressoché infinite.
+Nell'ultimo decennio abbiamo assistito ad uno sviluppo portentoso del settore dell'Internet of Things che ha contribuito alla diffusione
+di un enorme numero di dispositivi wireless. Il numero di questi dispositivi ha registrato crescite costanti negli anni e loro applicazioni sono ormai infinite.
 Essi trovano impiego in ambito domestico dove realizzano l'automatizzazione dei compiti quotidiani, in quello sanitario in cui monitorano lo stato di salute
 dei pazienti e in ambito sottomarino dove gli obbiettivi spaziano da quello di realizzare campionamenti di dati sino a creare vaste reti di comunicazione sottomarine.
 L'immissione di questo enorme contingente di dati nella rete ha reso possibili nuove interpretazioni e lo sviluppo di soluzioni che puntano a
@@ -70,48 +70,61 @@ oggetto di scaricamento delle batterie che li alimentano. Infatti, la morte prem
 disconnessione dello stesso, poichè frequentemente si tratta di reti \emph{multi-hop} che realizzano la comunicazione passando attraverso nodi intermedi, si può
 verificare perfino la disconnessione dell'intera rete.\\
 
+Nel seguito verranno descritte le principali problematiche che motivano ricerca di nuove idee per la costruzione di protocolli di rete efficienti.
+Nel capitolo seguente analizzeremo lo scenario di riferimento e le principali considerazioni che nel tempo sono state adottate e che ad oggi
+definiscono il panorama delle Wireless Sensor Networks.\\
 
-Nel capitolo 2 ...\\
+Nel capitolo 3 verrà presentato uno specifico protocollo di rete per sistemi IoT: il protocollo GREEN-WUP. In questo lavoro ci concentreremo sullo
+studio dei principi che regolano il design dei protocolli di rete e sulla loro applicazione in riferimento al protocollo in questione. Analizzeremo
+in dettaglio il comportamento del protocollo, descrivendone i principali vantaggi e le problematiche.\\
 
-Nel capitolo 3 ...\\
+Nel capitolo 4 verrà presentata una variante del protocollo originale che punta a risolvere le problematiche osservate nel capitolo precedente. Le
+modifiche apportate saranno descritte in dettaglio sia a livello teorico che a livello di implementazione all'interno di Castalia,
+simulatore utilizzato a cui faremo diffusamente riferimento all'interno di questa relazione.\\
 
-Nel capitolo 4 ...\\
+Nel capitolo 5 saranno analizzate le prestazioni della variante proposta e quelle del protocollo originale. In particolare, verranno mostrati i
+comportamenti di entrambe le implementazioni all'interno di uno stesso ambiente reale ed infine nel Capitolo 6 trarremo le conclusioni di quanto osservato.
 
 
 \chapter{Scenario di riferimento}
 
-Sino a qualche anno fa, la principale tendenza nello sviluppo di soluzioni ai problemi sopra menzionati consisteva nell'introduzione di cicli di attività
-dei nodi, il cosiddetto \emph{duty cycling} definito come la frazione di tempo in cui un nodo è attivo, il cui obbettivo era quello di minimizzare i momenti
+Sino a qualche anno fa, la principale tendenza nello sviluppo di soluzioni ai problemi menzionati nel Capitolo 1 consisteva nell'introduzione di cicli di attività
+dei nodi. Il cosiddetto \emph{duty cycling}, definito come la frazione di tempo in cui un nodo è attivo, aveva come obbettivo quello di minimizzare i momenti
 in cui i nodi sensori sono accessi senza alcun processamento di dati attivo. Seppur questo approccio permetta di prolungare la durata della vita della rete,
 incrementa in maniera considerevole i ritardi nelle comunicazioni, dal momento che queste possono avvenire solamente all'interno delle finestre di attività
-delle coppie dei nodi coinvolti. Inoltre l'utilizzo del duty cycling non permette di risolvere i problemi sopra citati, in quanto le comunicazioni
-possono ancora avvenire nei momenti di inattivà e dualmente esistono ancora i periodi di tempo in cui i nodi consumano energia pur non ricevendo o inviando dati.
+delle coppie dei nodi coinvolti. Tuttavia l'utilizzo del duty cycling non permette di risolvere tutti i problemi in quanto le comunicazioni possono ancora
+avvenire nei momenti di inattivà dei nodi. Dualmente, esistono ancora i periodi di tempo in cui i nodi consumano energia pur non ricevendo o inviando dati.\\
+
+
 In questo panorama vengono introdotte le \emph{wake up radios}, in grado di abbattere i consumi energetici mantenendo bassi i ritardi nelle comunicazioni.
-La principale differenza rispetto all'approccio tradizionale consiste nell'introdurre un'antenna secondaria per i soli messaggi di wake-up che è costantemente
-attiva. La nuova antenna è progettata per avere di dimensioni e consumi energetici nettamente inferiori rispetto alla radio principale e, al momento della ricezione
-di un messaggio di wake-up, è possibile attivarla e ricevere il messaggio dati. Di fatto, questa tecnologia implementa uno schema di comunicazione on demand:
-un nodo può inviare un pacchetto dati ad un nodo dormiente semplicemente  posticipandone l'invio a quello di una sequenza di wake-up che, svegliando il ricevente,
-lo abilita alla ricezione del pacchetto dati. In questo modo i nodi possono rimanere attivi per il solo tempo minimo necessario a svolgere l'attività richiesta
-e lasciare spenta la radio principale nel tempo rimanente, essendo eventualmente svegliati da una sequenza di wake-up quando richiesto.
-Dal punto vista energetico questo approccio è altamente efficiente e non richiede alcuna forma di sincronizzazione che è generalmente non desiderata in quanto
-implicitamente introduce overhead dovuto alla gestione di timer aggiuntivi.\\
+La principale differenza rispetto all'approccio tradizionale consiste nell'introdurre un'antenna secondaria per i soli messaggi di wake-up costantemente
+attiva. La nuova antenna è progettata per avere di dimensioni ridotte e consumi energetici nettamente inferiori rispetto a quelli della radio principale.
+Al momento della ricezione di un messaggio di wake-up è possibile attivarla e ricevere il pacchetto dati. Di fatto questa tecnologia implementa uno schema
+di comunicazione \emph{on demand}: un nodo può inviare un pacchetto dati ad un nodo dormiente semplicemente  posticipandone l'invio a quello di una sequenza
+di wake-up che, svegliando il ricevente, lo abilita alla ricezione. In questo modo i nodi possono rimanere attivi per il solo tempo minimo necessario a
+svolgere l'attività richiesta e lasciare spenta la radio principale nel tempo rimanente. Dal punto vista energetico questo approccio è altamente efficiente
+e non richiede alcuna forma di sincronizzazione che è generalmente non desiderata in quanto implicitamente introduce overhead dovuto alla gestione di timer
+aggiuntivi.\\
 
 Più recentemente la tendenza è quella di equipaggiare i nodi sensori, dotati di wake up radios, con moduli per l'\emph{energy harvesting} come ulteriore
-supporto energetico alla loro durata di vita. In particolare, i nodi sono in grado utilizzare l'energia fornita dalle pile elettriche di cui sono
-forniti e derivarne di nuova mediante turbine eoliche, pannelli solari e generatori termoelettrici di cui sono equipaggiati. La ricerca dimostrato che l'impiego
-di nodi dotati di energy harvesting \cite{energy-harvesting-paper} e che sono abilitati alle wake up radios \cite{wake-up-radios-paper} ha portato notevoli
-incrementi nelle performance delle WSN. Inoltre, l'innovativa tecnologia delle wake up radios può essere combinata con il cosiddetto \emph{semantic addressing}.
-L'idea è di limitare ad un sottoinsieme di nodi la ricezione di una sequenza di wake up, evitando quindi che questa sia recepita da tutti i nodi presenti all'interno
-del range di comunicazione. Il principio fondante in questo caso è di scegliere
-opportunamente una sequenza di wake up da assegnare ad un certo numero di nodi della rete e di svegliare, al momento della ricezione del messaggio, tutti e soli i
-nodi desiderati. In questo scenario, i consumi energetici possono essere ulteriormente ridotti poichè virtualmente si azzerano il numero dei nodi che vengono
-riattivati a seguito di comunicazioni che non sono a loro destinate.\\
+supporto energetico alla loro durata di attività. In particolare, i nodi sono in grado di utilizzare l'energia fornita dalle pile elettriche di cui sono
+forniti e di derivarne nuova mediante turbine eoliche, pannelli solari e generatori termoelettrici di cui sono equipaggiati. La ricerca ha dimostrato che
+l'impiego di nodi dotati di energy harvesting \cite{energy-harvesting-paper} e che sono abilitati alle wake up radios \cite{wake-up-radios-paper} ha
+portato notevoli incrementi nelle performance delle Wireless Sensor Networks.\\
 
-Questo lavoro si concentra sullo studio dei cosiddetti \emph{green protocols}, ovverosia di quei protocolli che si basano sulle tecnologie sopra esposte
-e che implementano la comunicazione tra nodi minimizzandone gli sprechi energetici e massimizzando la durata della vita delle reti. Nella letteratura scientifica
-sono presenti molti protocolli di questo tipo (es. CTP-WUR, GREENROUTES, WHARP) ed ognuno punta a risolvere problemati sollevate altri, migliorandone le performance
-rispetto a diverse metriche. Nel seguito verrà analizzato in dettaglio il comportamento del protocollo GREEN-WUP che utilizza energy harvesting e
-wake up radios per realizzare un'opportuna scelta dei nodi intermedei necessari alla ricezione dei dati da parte del sink.\\
+Inoltre, l'innovativa tecnologia delle wake up radios può essere combinata con il cosiddetto \emph{semantic addressing}. L'idea in questo caso è di limitare
+ad un sottoinsieme di nodi la ricezione di una sequenza di wake up, evitando quindi che questa sia recepita da tutti i nodi presenti all'interno
+del range di comunicazione. Il principio fondante è quello di scegliere una o più opportune sequenze di wake up e di assegnarle ad un certo
+sottoinsieme di nodi della rete. A meno di errori di interpretazione della sequenza di wake up, al momento della ricezione tutti e soli e nodi desiderati
+saranno svegliati. In questo scenario, i consumi energetici risultano essere ulteriormente ridotti poichè viene virtualmente azzerato il numero dei nodi
+che sono riattivati a seguito di sequenze di wake up non a loro destinate ma che si trovano all'interno del loro range.\\
+
+Questo lavoro si concentra sullo studio di protocolli delle cosiddette \emph{green wireless networks}, ovverosia di quei protocolli che si basano
+sulle tecnologie sopra esposte e che implementano la comunicazione tra nodi minimizzandone gli sprechi energetici al fine di massimizzare
+i tempi di attività e il corretto funzionamento delle comunicazioni all'interno delle reti. Nella letteratura scientifica
+sono presenti molti protocolli di questo tipo (es. CTP-WUR, GREENROUTES, WHARP) e ciascuno di loro punta a risolvere diverse problematiche.
+Nel seguito verrà analizzato in dettaglio il comportamento del protocollo GREEN-WUP che utilizza energy harvesting e wake up radio per realizzare
+un'opportuna scelta del percorso da seguire per permettere la ricezione dati da parte del sink node.\\
 
 \chapter{Il protocollo GREEN-WUP}
 \chapter{Soluzioni proposte}
