Restore old format

--- a/relazione.tex
+++ b/relazione.tex
@@ -2,7 +2,7 @@
 % !TeX program = pdflatex
 % !TeX spellcheck = it_IT
 
-\documentclass[binding=0.6cm,Lau,noexaminfo]{sapthesis}
+\documentclass[binding=0.6cm,TFA]{sapthesis}
 
 \usepackage{microtype}
 \usepackage[italian]{babel}
